Title changes and link fix

--- a/.htaccess
+++ b/.htaccess
@@ -2,8 +2,8 @@
 deny from all
 </Files>
 Options -Indexes
-ErrorDocument 404 /404/404.html
 RewriteEngine on
+RewriteRule ^/(.*)$   /p/$1
 RewriteCond %{HTTP_HOST} ^(socialengineeringhelp\.com)(:80)? [NC]
 RewriteRule ^(.*) http://www.socialengineeringhelp.com/$1 [R=301,L]
 order deny,allow
